<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <TextView
        android:id="@+id/chat_tv_title"
        android:layout_width="326dp"
        android:layout_height="36dp"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:text="@string/main_btn_chat"
        android:textSize="34sp"
        android:textColor="@color/black"
        android:background="@drawable/gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <LinearLayout
        android:id="@+id/chat_nik_layout"
        android:layout_width="380dp"
        android:layout_height="65dp"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="20dp"
        android:padding="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_tv_title"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/italic"
            android:textSize="20sp"
            android:text="@string/chat_tv_nik" />

        <EditText
            android:id="@+id/chat_et_nik"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@null"
            android:text="@string/chat_et_nik"
            android:textColorHint="@color/calc_expression_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/chat_new_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:foreground="@drawable/reminder"
            android:foregroundGravity="center" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/chat_sv_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_nik_layout"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginHorizontal="10dp">

        <LinearLayout
            android:id="@+id/chat_layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="352dp"
        android:layout_height="67dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_sv_container"
        app:layout_constraintVertical_bias="0.773"
        android:layout_marginHorizontal="15dp">

        <EditText
            android:id="@+id/chat_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="textMultiLine"
            android:lines="2"
            android:textColorHint="@color/calc_expression_text"
            android:textSize="16sp"
            />

        <ImageButton
            android:id="@+id/btn_temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/game_btn_load"
            android:src="@android:drawable/ic_menu_send"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>